--- a/package.json
+++ b/package.json
@@ -13,20 +13,22 @@
   },
   "private": true,
   "dependencies": {
-    "@kontent-ai/delivery-sdk": "12.0.2",
-    "@kontent-ai/management-sdk": "3.1.0",
     "@angular/animations": "14.1.2",
+    "@angular/cdk": "^14.1.2",
     "@angular/common": "14.1.2",
     "@angular/compiler": "14.1.2",
     "@angular/core": "14.1.2",
     "@angular/forms": "14.1.2",
+    "@angular/material": "^14.1.2",
     "@angular/platform-browser": "14.1.2",
     "@angular/platform-browser-dynamic": "14.1.2",
     "@angular/router": "14.1.2",
+    "@kontent-ai/delivery-sdk": "12.0.2",
+    "@kontent-ai/management-sdk": "3.1.0",
+    "ngx-file-drop": "14.0.1",
     "rxjs": "~7.5.6",
     "tslib": "^2.4.0",
-    "zone.js": "~0.11.7",
-    "ngx-file-drop": "14.0.1"
+    "zone.js": "~0.11.7"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~14.1.2",
