--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "ngx-file-drop": "14.0.1",
     "rxjs": "~7.5.6",
     "tslib": "^2.4.0",
-    "zone.js": "~0.11.7"
+    "zone.js": "~0.11.7",
+    "lightgallery": "2.5.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~14.1.2",
