--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "rxjs": "~7.5.6",
     "tslib": "^2.4.0",
     "zone.js": "~0.11.7",
-    "lightgallery": "2.5.0"
+    "lightgallery": "2.5.0",
+    "@kentico/kontent-smart-link":"2.3.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~14.1.2",
